--- a/administrator/components/com_modules/models/forms/filter_modules.xml
+++ b/administrator/components/com_modules/models/forms/filter_modules.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
+	<fieldset addfieldpath="/administrator/components/com_modules/models/fields" />
 
 	<field
 		name="client_id"
 		type="list"
 		label=""
-		onchange="jQuery.fn.clearPositionType();this.form.submit();"
-	>
+		onchange="jQuery('#filter_search, select[id^=filter_], #list_fullordering').val('');this.form.submit();"
+		>
 		<option value="0">JSITE</option>
 		<option value="1">JADMINISTRATOR</option>
 	</field>
-
-	<fields name="filter" addfieldpath="/administrator/components/com_modules/models/fields">
-
+	<fields name="filter">
 		<field
 			name="search"
 			type="text"
@@ -20,60 +19,52 @@
 			description="COM_MODULES_MODULES_FILTER_SEARCH_DESC"
 			hint="JSEARCH_FILTER"
 		/>
-
 		<field
 			name="state"
 			type="status"
 			filter="*,-2,0,1"
 			label="JSTATUS"
 			onchange="this.form.submit();"
-		>
+			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
 		</field>
-
 		<field
 			name="position"
 			type="modulesposition"
 			label="COM_MODULES_FIELD_POSITION_LABEL"
 			onchange="this.form.submit();"
-		>
+			>
 			<option value="">COM_MODULES_OPTION_SELECT_POSITION</option>
 		</field>
-
 		<field
 			name="module"
 			type="ModulesModule"
 			label="COM_MODULES_OPTION_SELECT_MODULE"
 			onchange="this.form.submit();"
-		>
+			>
 			<option value="">COM_MODULES_OPTION_SELECT_MODULE</option>
 		</field>
-
 		<field
 			name="access"
 			type="accesslevel"
 			label="JOPTION_FILTER_ACCESS"
 			description="JOPTION_FILTER_ACCESS_DESC"
 			onchange="this.form.submit();"
-		>
+			>
 			<option value="">JOPTION_SELECT_ACCESS</option>
 		</field>
-
 		<field
 			name="language"
 			type="contentlanguage"
 			label="JOPTION_FILTER_LANGUAGE"
 			description="JOPTION_FILTER_LANGUAGE_DESC"
 			onchange="this.form.submit();"
-		>
+			>
 			<option value="">JOPTION_SELECT_LANGUAGE</option>
 			<option value="*">JALL</option>
 		</field>
-
 	</fields>
-
 	<fields name="list">
-
 		<field
 			name="fullordering"
 			type="list"
@@ -81,8 +72,8 @@
 			statuses="*,0,1,-2"
 			description="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
-			default="position ASC"
-		>
+			default="ordering ASC"
+			>
 			<option value="">JGLOBAL_SORT_BY</option>
 			<option value="ordering ASC">JGRID_HEADING_ORDERING_ASC</option>
 			<option value="ordering DESC">JGRID_HEADING_ORDERING_DESC</option>
@@ -103,7 +94,6 @@
 			<option value="a.id ASC">JGRID_HEADING_ID_ASC</option>
 			<option value="a.id DESC">JGRID_HEADING_ID_DESC</option>
 		</field>
-
 		<field
 			name="limit"
 			type="limitbox"
@@ -113,7 +103,5 @@
 			description="JFIELD_PLG_SEARCH_SEARCHLIMIT_DESC"
 			onchange="this.form.submit();"
 		/>
-
 	</fields>
-
 </form>
