--- a/administrator/components/com_modules/models/forms/filter_modules.xml
+++ b/administrator/components/com_modules/models/forms/filter_modules.xml
@@ -54,6 +54,14 @@
 			<option value="">JOPTION_SELECT_ACCESS</option>
 		</field>
 		<field
+			name="assignment"
+			type="ModulesAssignment"
+			label="COM_MODULES_HEADING_PAGES"
+			onchange="this.form.submit();"
+			>
+			<option value="">COM_MODULES_OPTION_SELECT_PAGES</option>
+		</field>
+		<field
 			name="language"
 			type="contentlanguage"
 			label="JOPTION_FILTER_LANGUAGE"
