--- a/administrator/components/com_plugins/models/forms/filter_plugins.xml
+++ b/administrator/components/com_plugins/models/forms/filter_plugins.xml
@@ -11,7 +11,7 @@
 		/>
 		<field
 			name="enabled"
-			type="status"
+			type="plugin_status"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
@@ -22,6 +22,13 @@
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_PLUGINS_OPTION_FOLDER</option>
+		</field>
+		<field
+			name="element"
+			type="pluginelement"
+			onchange="this.form.submit();"
+			>
+			<option value="">COM_PLUGINS_OPTION_ELEMENT</option>
 		</field>
 		<field
 			name="access"
