--- a/administrator/components/com_cache/models/forms/filter_cache.xml
+++ b/administrator/components/com_cache/models/forms/filter_cache.xml
@@ -17,6 +17,21 @@
 			description="COM_CACHE_FILTER_SEARCH_DESC"
 			hint="JSEARCH_FILTER"
 		/>
+		<field
+			name="type"
+			type="list"
+			label="COM_CACHE_FILTER_TYPE_LABEL"
+			description="COM_CACHE_FILTER_TYPE_DESC"
+			onchange="this.form.submit();"
+			>
+			<option value="">COM_CACHE_OPTION_SELECT_TYPE</option>
+			<option value="component">COM_CACHE_TYPE_COMPONENT</option>
+			<option value="library">COM_CACHE_TYPE_LIBRARY</option>
+			<option value="module">COM_CACHE_TYPE_MODULE</option>
+			<option value="plugin">COM_CACHE_TYPE_PLUGIN</option>
+			<option value="template">COM_CACHE_TYPE_TEMPLATE</option>
+			<option value="other">COM_CACHE_TYPE_OTHER</option>
+		</field>
 	</fields>
 	<fields name="list">
 		<field
@@ -25,9 +40,13 @@
 			label="JGLOBAL_SORT_BY"
 			description="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
-			default="group ASC"
+			default="title ASC"
 			>
 			<option value="">JGLOBAL_SORT_BY</option>
+			<option value="title ASC">JGLOBAL_TITLE_ASC</option>
+			<option value="title DESC">JGLOBAL_TITLE_DESC</option>
+			<option value="type ASC">COM_CACHE_HEADING_TYPE_ASC</option>
+			<option value="type DESC">COM_CACHE_HEADING_TYPE_DESC</option>
 			<option value="group ASC">COM_CACHE_HEADING_GROUP_ASC</option>
 			<option value="group DESC">COM_CACHE_HEADING_GROUP_DESC</option>
 			<option value="count ASC">COM_CACHE_HEADING_COUNT_ASC</option>
